--- a/package.json
+++ b/package.json
@@ -81,12 +81,14 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-body-classname": "^1.3.1",
+    "react-children-utilities": "^2.10.0",
     "react-dom": "^16.8.6",
     "react-emotion": "9.2.12",
     "react-helmet": "^5.2.0",
     "react-live": "^2.0.1",
     "react-markdown": "^4.2.2",
     "react-scrollspy": "^3.4.3",
+    "react-syntax-highlighter": "^15.5.0",
     "remark-containers": "^1.1.2",
     "sass": "^1.42.1",
     "slugify": "^1.3.6",
